--- a/ze/zeinterval_callbacks.cpp.erb
+++ b/ze/zeinterval_callbacks.cpp.erb
@@ -20,9 +20,28 @@
 #include <tuple>
 #include <climits>
 #include <set>
+#include <assert.h>     /* assert */
 
 <%# Should pass device_to_timerResolution_kernelTimestampValidBits %>
-static inline uint64_t born_timing_to_ns(zeinterval_callbacks_state* state, hp_device_t hp_device, uint64_t start, uint64_t end) {
+static inline uint64_t corrected_l1(const uint64_t d1, const uint64_t l0, const uint64_t d0, const uint64_t l1_min, const uint64_t valid_bits) {
+    /*
+    d1 is the device time we want to convert to the lttng time (l1)
+    l0 and d0 are a lttng and device timestamp who are synchronized
+    l1_min is the minimun approximation of l1
+
+    lttng timer (l*) is assumed to be monotonic, where the device term can overflow and loop arround
+    */
+
+    const int64_t l1_nocycle = d1 + l0 - d0;
+    return l1_nocycle;
+
+    assert (valid_bits <= 64);
+    const uint64_t max_val = (uint64_t) 1 << valid_bits;
+    const unsigned n = ( (l1_min - l1_nocycle) >> valid_bits ) + 1 ;
+    return max_val*n + l1_nocycle;
+}
+
+static inline uint64_t elapsed_time_ns(zeinterval_callbacks_state* state, hp_device_t hp_device, uint64_t start, uint64_t end) {
     static bool is_ns = true;
     uint64_t timerResolution = 1;
     uint64_t kernelTimestampValidBits = 64;
@@ -41,9 +60,16 @@ static inline uint64_t born_timing_to_ns(zeinterval_callbacks_state* state, hp_d
         return (end - start) * timerResolution;
     } else {
        <%# We cycle (don't know how many time. Lets assume one) %>
-       const uint64_t max_val = (1 << kernelTimestampValidBits) - 1;
+       const uint64_t max_val = ((uint64_t) 1 << kernelTimestampValidBits) - 1;
        return (max_val - start + end ) * timerResolution;
     }
+}
+
+static inline uint64_t start_time_ns(zeinterval_callbacks_state* state, hp_device_t hp_device, uint64_t start, uint64_t born_min) {
+    const auto [l0,d0] = state->sync_clock_lttng_device[hp_device];
+    const auto [_timerResolution, _kernelTimestampValidBits] = state->device_to_timerResolution_kernelTimestampValidBits[hp_device];
+    const uint64_t start_ns = start * _timerResolution;
+    return corrected_l1(start_ns, l0, d0, born_min, _kernelTimestampValidBits);
 }
 
 void *init_zeinterval_callbacks_state() {
@@ -64,7 +90,7 @@ static void create_and_enqueue_host_message(const char* hostname, const process_
      state->downstream_message_queue.push(message);
 }
 
-void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id, 
+void create_and_enqueue_device_message(const char* hostname, const process_id_t process_id, const thread_id_t thread_id,
                                        const thapi_device_id device_id, const thapi_device_id subdevice_id,
                                        const char* name, const uint64_t ts, const uint64_t duration, const bool err) {
 
@@ -152,7 +178,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
     const thread_id_t  thread_id  = borrow_thread_id(bt_evt);
     zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
   <%end %>
-   
+
   <%#        _ ___
         /\  |_) |     _  _. | |  _
        /--\ |  _|_   (_ (_| | | _>
@@ -161,7 +187,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
        dbt_event.name_unsanitized.start_with?('lttng_ust_zet:') or
        dbt_event.name_unsanitized.start_with?('lttng_ust_zes:') or
        dbt_event.name_unsanitized.start_with?('lttng_ust_zel:')  %>
-    int64_t ns_from_origin; 
+    int64_t ns_from_origin;
     bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
    <%if dbt_event.name_unsanitized.end_with?(START) %>
     state->host_start[hpt_function_name_t(hostname,process_id, thread_id, "<%= dbt_event.name_striped %>")] = ns_from_origin;
@@ -178,7 +204,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
     create_and_enqueue_host_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>", start_g, ns_from_origin-start_g, 0);
      <% end %>
    <%end%>
-  <%end%>  
+  <%end%>
 
   <%#
        |\/|  _  ._ _   _  ._      _.  _  _  _   _  _  _   _
@@ -187,8 +213,28 @@ static void zeinterval_<%= dbt_event.name %>_callback(
   %>
   <% if (dbt_event.name_striped.include?("Alloc") or dbt_event.name_striped.include?("Memory")) and
          dbt_event.fields_name.include? ("size") %>
-  create_and_enqueue_traffic_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>",size);  
+  create_and_enqueue_traffic_message(hostname.c_str(), process_id, thread_id, "<%= dbt_event.name_striped %>",size);
   <% end %>
+
+  <%#  ___                                    __         _
+        | o ._ _   _   _ _|_  _. ._ _  ._    (_  |_  o _|_ _|_
+        | | | | | (/_ _>  |_ (_| | | | |_)   __) | | |  |   |_
+                                     |
+  %>
+  <%if dbt_event.name_unsanitized == "lttng_ust_ze_properties:device_timer"  %>
+    const hostname_t  hostname{borrow_hostname(bt_evt)};
+    const process_id_t process_id = borrow_process_id(bt_evt);
+    zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
+
+    int64_t ns_from_origin;
+    bt_clock_snapshot_get_ns_from_origin(bt_clock, &ns_from_origin);
+
+    hp_device_t hp_device{hostname,process_id, (thapi_device_id) hDevice};
+    const auto [_timerResolution, _kernelTimestampValidBits] = state->device_to_timerResolution_kernelTimestampValidBits[hp_device];
+    const uint64_t mask = ((uint64_t) 1 << _kernelTimestampValidBits) - 1;
+    state->sync_clock_lttng_device[hp_device] = clock_lttng_device_t{ns_from_origin, (deviceTimestamp & mask )*_timerResolution};
+  <% end %>
+
 
   <%#
     _         _                    _                                   __          _
@@ -200,7 +246,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
 
   <%# Map [ Tuple [hostname, process, device_or_subdevice], device] ] %>
   <% if dbt_event.name_unsanitized == "lttng_ust_ze:zeDeviceGet_#{STOP}" %>
-    if (phDevices_vals != nullptr) {  
+    if (phDevices_vals != nullptr) {
         for (unsigned int i=0; i < pCount_val; i++ ) {
             const thapi_device_id d = (thapi_device_id) phDevices_vals[i];
             state->device_to_rootdevice[hp_device_t(hostname,process_id, d) ] = d;
@@ -211,7 +257,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
   <% elsif dbt_event.name_unsanitized == "lttng_ust_ze:zeDeviceGetSubDevices_#{STOP}" %>
     const thapi_device_id device = state->start_device[hpt_t(hostname,process_id,thread_id) ];
     const thapi_device_id root_device = state->device_to_rootdevice[hp_device_t(hostname,process_id, device) ];
-    if (phSubdevices_vals != nullptr) {  
+    if (phSubdevices_vals != nullptr) {
         for (unsigned int i=0; i < pCount_val; i++ ) {
             const thapi_device_id d = (thapi_device_id) phSubdevices_vals[i];
             state->device_to_rootdevice[hp_device_t(hostname,process_id, d) ] = root_device;
@@ -231,7 +277,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
            <% raise "Dont know what kind of commandListCreate events this is"%>
        <% end %>
   <% end %>
-  
+
   <%#
     _         _                    _
    |_) ._ _ _|_ o | o ._   _  o   |_    ._   _ _|_ o  _  ._    ._   _. ._ _   _
@@ -257,7 +303,7 @@ static void zeinterval_<%= dbt_event.name %>_callback(
     state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id,name)] = state->command_list_to_device[hp_command_list_t(hostname,process_id,hCommandList)];
    <% end %>
   <% end %>
-    
+
   <%#
     _         _                    _                        ___
    |_) ._ _ _|_ o | o ._   _  o   |_ |  _. ._   _  _   _|    | o ._ _   _   _
@@ -265,13 +311,13 @@ static void zeinterval_<%= dbt_event.name %>_callback(
                            _|              |
    Map [ Tuple[hostname, process, device, subdevice, cl_function_name], elapsed_time ]
   %>
-  
+
   <%# Getting timer resultion of each device %>
   <%if dbt_event.name_unsanitized == "lttng_ust_ze_properties:device" %>
    zeinterval_callbacks_state* state = (zeinterval_callbacks_state*) zeinterval_iter_g->callbacks_state;
    const hostname_t hostname    = borrow_hostname(bt_evt);
    const process_id_t process_id = borrow_process_id(bt_evt);
-   const auto t = timerResolution_kernelTimestampValidBits_t( pDeviceProperties_val -> timerResolution, 64);
+   const auto t = timerResolution_kernelTimestampValidBits_t( pDeviceProperties_val->timerResolution, pDeviceProperties_val->kernelTimestampValidBits);
    state->device_to_timerResolution_kernelTimestampValidBits[hp_device_t(hostname,process_id, (thapi_device_id) hDevice)] = t ;
 
   <%elsif dbt_event.name_unsanitized == "lttng_ust_ze_profiling:event_profiling" %>
@@ -299,9 +345,13 @@ static void zeinterval_<%= dbt_event.name %>_callback(
    if (state->event_to_function_name_and_ts.count(hp_event)) {
       const auto [thread_id,function_name,ts] =  state->event_to_function_name_and_ts[hp_event];
       const auto [device,subdevice] = state->function_name_to_dsd[hpt_function_name_t(hostname,process_id,thread_id, function_name)];
-      const uint64_t delta = born_timing_to_ns(state, hp_device_t(hostname,process_id, device),contextStart,contextEnd);
-      
-      const uint64_t start = ts + (contextStart - globalStart);
+
+      const hp_device_t hp_device{hostname, process_id, device};
+
+
+      const uint64_t delta = elapsed_time_ns(state, hp_device, globalStart, globalEnd);
+      const uint64_t start = start_time_ns(state, hp_device, globalStart,ts);
+
       create_and_enqueue_device_message(hostname.c_str(),process_id,thread_id,device,subdevice,function_name.c_str(),start,delta, delta == 0 );
 
       state->event_to_function_name_and_ts.erase(hp_event);
@@ -313,9 +363,9 @@ static void zeinterval_<%= dbt_event.name %>_callback(
      (void) subdevice;
 
      const hp_device_t hp_device{hostname, process_id, device};
-     //const uint64_t start_event = state->device_ts_to_llng_ts.count(hp_device) ? state->device_ts_to_llng_ts[hp_device] + start:  ts + (start - queued);
-     const uint64_t start = ts + (contextStart - globalStart);
-     const uint64_t delta = born_timing_to_ns(state, hp_device, contextStart,contextEnd);
+     const uint64_t start = start_time_ns(state, hp_device, globalStart,ts);
+     const uint64_t delta = elapsed_time_ns(state, hp_device, globalStart, globalEnd);
+
      state->event_result_to_start_and_delta[hp_event] = sd_t(start,delta);
      state->event_to_function_name_and_ts[hp_event] = tfn_ts_t(thread_id, function_name,ts);
   }
