--- a/utils/tests_template/interval_profiling_block.yaml.erb
+++ b/utils/tests_template/interval_profiling_block.yaml.erb
@@ -1,35 +1,74 @@
-<% dur = 10 if be == "opencl" %> 
+<% event = "event" if be == "opencl" %>
+<% event = "hEvent" if be == "ze" %>
+<% event = "hStop" if be == "cuda" %>
+
+<% prof_end = "end" if be == "opencl" %>
+<% prof_end = "globalEnd" if be == "ze" %>
+<% prof_end = "milliseconds" if be == "cuda" %>
+
+<% dur = 10 if be == "opencl" %>
 <% dur = 10 if be == "ze" %>
 <% dur = 10000000 if be == "cuda" %>
 
-
-:default_stream: stream0
-:stream_classes:
-- :name: interval_class
-  :schemas:
-  - thapi_interval
-  :common_context:
-  - :name: hostname
-    :class: string
-  - :name: vpid
-    :class: signed
-  - :name: vtid
-    :class: unsigned
-  - :name: ts
-    :class: unsigned
-:streams:
-- :name: stream0
-  :class: interval_class
-:events:
-- :name: lttng:device
-  :common_context:
-    hostname: aurora12.gov
-  :payload:
-    name: <%= profiled_call %>
-    dur: <%= dur %>
-- :name: lttng:host
-  :common_context:
-    hostname: aurora12.gov
-  :payload:
-    name: <%= profiled_call %>
-    dur: 3
+in:
+  :hostname: aurora12.gov
+  :default_stream: stream0
+  :stream_classes:
+  - :name: stream_class
+    :schemas:
+    - thapi_<%= be %>
+    :clock_snapshot_value: true
+    :common_context:
+    - :name: vpid
+      :class: signed
+    - :name: vtid
+      :class: unsigned
+  :streams:
+  - :name: stream0
+    :class: stream_class
+  :events:
+  <% if be == "cuda" %>
+  - :name: lttng_ust_cuda:cuCtxSetCurrent_entry
+  <% end %>
+  - :name: lttng_ust_<%= be %>:<%= profiled_call %>_entry
+    :clock_snapshot_value: 0
+  - :name: lttng_ust_<%= be %>_profiling:event_profiling_results
+    :payload:
+      <%= event %>: 12
+      <%= prof_end %>: 10
+  - :name: lttng_ust_<%= be %>_profiling:event_profiling
+    :payload:
+      <%= event %>: 12
+  - :name: lttng_ust_<%= be %>:<%= profiled_call %>_exit
+    :clock_snapshot_value: 3
+ref:
+  :default_stream: stream0
+  :stream_classes:
+  - :name: interval_class
+    :schemas:
+    - thapi_interval
+    :common_context:
+    - :name: hostname
+      :class: string
+    - :name: vpid
+      :class: signed
+    - :name: vtid
+      :class: unsigned
+    - :name: ts
+      :class: unsigned
+  :streams:
+  - :name: stream0
+    :class: interval_class
+  :events:
+  - :name: lttng:device
+    :common_context:
+      hostname: aurora12.gov
+    :payload:
+      name: <%= profiled_call %>
+      dur: <%= dur %>
+  - :name: lttng:host
+    :common_context:
+      hostname: aurora12.gov
+    :payload:
+      name: <%= profiled_call %>
+      dur: 3
