--- a/utils/tests_template/interval_profiling_block.yaml.erb
+++ b/utils/tests_template/interval_profiling_block.yaml.erb
@@ -1,14 +1,17 @@
-<% event = "event" if be == "opencl" %>
-<% event = "hEvent" if be == "ze" %>
-<% event = "hStop" if be == "cuda" %>
-
-<% prof_end = "end" if be == "opencl" %>
-<% prof_end = "globalEnd" if be == "ze" %>
-<% prof_end = "milliseconds" if be == "cuda" %>
-
-<% dur = 10 if be == "opencl" %>
-<% dur = 10 if be == "ze" %>
-<% dur = 10000000 if be == "cuda" %>
+<% case be
+   when "opencl"
+     event = "event"
+     prof_end = "end"
+     dur = 10
+   when "ze"
+     event = "hEvent"
+     prof_end = "globalEnd"
+     dur = 10
+   when "cuda"
+     event = "hStop"
+     prof_end = "milliseconds"
+     dur = 10
+   end %>
 
 in:
   :hostname: aurora12.gov
