--- a/utils/tests_template/interval_common.dust.erb
+++ b/utils/tests_template/interval_common.dust.erb
@@ -5,7 +5,7 @@
     schemas: [<%= be %>_babeltrace_model.yaml]
     trace: interval_<%= namespace[/interval_(.*).dust/,1] %>.yaml
     trace_key: in
-- :plugin: filter.clinterval.interval
+- :plugin: filter.<%= interval %>.interval
   :name: interval
 - :plugin: source.ruby.dust
   :name: dust_out
